begin ch 16