@@ -3,19 +3,17 @@ package geektime.tdd.di;
 import jakarta.inject.Inject;
 import jakarta.inject.Provider;
 
-
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Arrays.stream;
 
 public class Context {
-    private Map<Class<?>, Provider<?>> providers = new HashMap<>();
+    private final Map<Class<?>, Provider<?>> providers = new HashMap<>();
 
     public <Type> void bind(Class<Type> type, Type instance) {
         providers.put(type, (Provider<Type>) () -> instance);
@@ -24,22 +22,28 @@ public class Context {
     public <Type, Implementation extends Type>
     void bind(Class<Type> type, Class<Implementation> implementation) {
         Constructor<Implementation> injectConstructor = getInjectConstructor(implementation);
-        providers.put(type, (Provider<Type>) () -> {
+        providers.put(type, getTypeProvider(injectConstructor));
+    }
 
-            try {
-                Object[] dependencies = stream(injectConstructor.getParameters())
-                        .map(p -> get(p.getType()).orElseThrow(DependencyNotFoundException::new))
-                        .toArray(Object[]::new);
-                return injectConstructor.newInstance(dependencies);
-            } catch ( InvocationTargetException | InstantiationException | IllegalAccessException  e) {
-                throw new RuntimeException(e);
-            }
-        });
+    private <Type, Implementation extends Type> Provider<Type> getTypeProvider(Constructor<Implementation> injectConstructor) {
+        // target: new XXX(injectConstructor)
+        return () -> getImplementation(injectConstructor);
+    }
+
+    private <Type> Type getImplementation(Constructor<Type> injectConstructor) {
+        try {
+            Object[] dependencies = stream(injectConstructor.getParameters())
+                    .map(p -> get(p.getType()).orElseThrow(DependencyNotFoundException::new))
+                    .toArray(Object[]::new);
+            return injectConstructor.newInstance(dependencies);
+        } catch (InvocationTargetException | InstantiationException | IllegalAccessException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     private <Type> Constructor<Type> getInjectConstructor(Class<Type> implementation) {
         List<Constructor<?>> injectConstructors = stream(implementation.getConstructors())
-                .filter(c -> c.isAnnotationPresent(Inject.class)).collect(Collectors.toList());
+                .filter(c -> c.isAnnotationPresent(Inject.class)).toList();
 
         if (injectConstructors.size() > 1) throw new IllegalComponentException();
 
